Automatically backed up by Learn

--- a/app/views/artist/index.erb
+++ b/app/views/artist/index.erb
@@ -1,7 +1,4 @@
-<h1>Artists</h1>
-
-    <ul>
-        <% @artists.each do |artist| %>
-           <li><a href='/artists/<%= artist.slug %>'><%= artist.name %></a></li>
-        <% end %>
-    </ul>
+<h2>Index of all Artists</h2>
+<% Artist.all.each do |artist| %>
+  <h5><a href='/artists/<%= artist.slug %>'><%= artist.name %></a></h5>
+<% end %>
