--- a/app/views/artist/show.erb
+++ b/app/views/artist/show.erb
@@ -1,12 +1,10 @@
-<h1> <%= @artist.name %> </h1>
-
-    <ul>
-        <% @artist.songs.each do |song| %>
-            <li><a href="/songs/<%= song.slug %>"><%= song.name %></a></li>
-        <% end %>
-    </ul>
-    <ul>
-        <% @artist.genres.each do |genre| %>
-            <li><a href="/genres/<%= genre.slug %>"><%= genre.name %></a></li>
-        <% end %>
-    </ul>
+<h2><%= @artist.name %></h2>
+<h3>Songs:</h3>
+  <% @artist.songs.each do |song| %>
+    <h5><a href='/songs/<%= song.slug %>'><%= song.name %><a></h5>
+  <% end %>
+<br><br>
+<h3>Genres:</h3>
+  <% @artist.genres.each do |genre| %>
+    <h5><a href='/genres/<%= genre.slug %>'><%= genre.name %><a></h5>
+  <% end %>
