Automatically backed up by Learn

--- a/app/views/genres/index.erb
+++ b/app/views/genres/index.erb
@@ -1,7 +1,4 @@
-<h1>Genres</h1>
-
-    <ul>
-        <% @genres.each do |genre| %>
-           <li><a href='/genres/<%= genre.slug %>'><%= genre.name %></a></li>
-        <% end %>
-    </ul>
+<h2>Index of all Genres</h2>
+<% Genre.all.each do |genre| %>
+  <h5><a href='/genres/<%= genre.slug %>'><%= genre.name %></a></h5>
+<% end %>
