--- a/app/views/genres/show.erb
+++ b/app/views/genres/show.erb
@@ -1,11 +1,10 @@
-<h1><%= @genre.name %></h1>
-
-    <ul>
-      <% @genre.songs.each do |song| %>
-        <li><a href='/songs/<%= song.slug %>'><%= song.name %></a></li>
-       <% end %>
-
-       <% @genre.artists.each do |artist| %>
-        <li><a href='/artists/<%= artist.slug %>'><%= artist.name %></a></li>
-       <% end %>
-    </ul>
+<h2><%= @genre.name %></h2>
+<h3>Songs:</h3>
+  <% @songs.each do |song| %>
+    <h5><a href='/songs/<%= song.slug %>'><%= song.name %><a></h5>
+  <% end %>
+<br><br>
+<h3>Artists:</h3>
+  <% @artists.each do |artist| %>
+    <h5><a href='/artists/<%= artist.slug %>'><%= artist.name %><a></h5>
+  <% end %>
